@startuml
entity "Schedule" {
    id : Long <<PK>>
    title : String
    content : String
    author : String
    password : String
    created_at : Timestamp
    updated_at : Timestamp
    deleted_at : Timestamp
}

entity "File" {
    id : Long <<PK>>
    schedule : "Schedule" <<FK>>
    file_name : String
    file_path : String
}

entity "Comment"{
    id : Long <<PK>>
    schedule : "Schedule"" <<FK>>
    content : String
    author : String
    created_at : Timestamp
}

Schedule ||--o{ File
Schedule ||--o{ Comment
@enduml